# feishu-agent-council

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
app/: __init__.py  config.py  db.py  feishu.py  main.py  modes.py  orchestrator.py  prompts.py  providers.py  schemas.py
docs/: deploy-render.md
docs/superpowers/specs/: 2026-04-29-feishu-agent-council-design.md
tests/: test_answer_format.py  test_modes.py
